compiler/testData/diagnostics/tests/annotations/options/targets/init.kt
annotation class base

@base class My {
    <!WRONG_ANNOTATION_TARGET!>@base<!> init {
    }
}
